# pinocchio_vault

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  justfile
.github/workflows/: ci.yml
clients/: codama.json  package.json  pnpm-lock.yaml  test_vault.ts  tsconfig.json
idl/: blueshift_vault.json
pinocchio-vault-substreams/: generator.2026-02-06T01-13-41.json  generator.json
pinocchio-vault-substreams/pinocchio_vault_indexer/: .gitignore  Cargo.toml  README.md  docker-compose.yaml  schema.sql  substreams.yaml
pinocchio-vault-substreams/pinocchio_vault_indexer/proto/: database_changes.proto  mydata.proto
pinocchio-vault-substreams/pinocchio_vault_indexer/src/: lib copy.rs  lib.rs
pinocchio-vault-substreams/pinocchio_vault_indexer/src/pb/: .last_generated_hash  mod.rs  pinocchio_vault.v1.rs  sf.substreams.rs  sf.substreams.sink.database.v1.rs
scripts/: codama_init.json
src/: lib.rs
src/instructions/: deposit.rs  mod.rs  withdraw.rs
