[package]
edition = "2021"
name = "pinocchio_vault_indexer"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]
name = "substreams"

[dependencies]
bs58 = "0.5.1"
prost = "0.13.5"
prost-types = "0.13.5"
substreams = "0.7.6"
substreams-solana = "=0.14.3"
# substreams-database-change = "1.3.1"
[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
